@@ -24,27 +24,37 @@ gDigitizationGlobal(gDigitization)
 	int verbosity = gopt->getInt("gemcv");
 	vector<string> requestedMedias = getStringVectorFromStringWithDelimiter(gopt->getString("output"), ",");
 	
-	GManager gOutputManager(verbosity-1);
-
-	// first string is filename
-	// the available plugins names are formatted as "xxxGMedia".
-	for(unsigned f=1; f<requestedMedias.size(); f++) {
-		string pluginName = requestedMedias[f] + "GMedia";
-		// need path here
-		gOutputManager.registerDL(pluginName);
+	if(requestedMedias.size() > 1) {
 		
-		(*gmediaFactory)[requestedMedias[f]] = gOutputManager.LoadObjectFromLibrary<GMedia>(pluginName);
+		GManager gOutputManager(verbosity);
+		
+		// first string is filename
+		// the available plugins names are formatted as "xxxGMedia".
+		for(unsigned f=1; f<requestedMedias.size(); f++) {
+			string pluginName = requestedMedias[f] + "GMedia";
+			// need path here
+			gOutputManager.registerDL(pluginName);
+			
+			(*gmediaFactory)[requestedMedias[f]] = gOutputManager.LoadObjectFromLibrary<GMedia>(pluginName);
+						
+			// set file name, open the connection
+			(*gmediaFactory)[requestedMedias[f]]->setOutputName(requestedMedias[0]);
+		}
 	}
 }
 
 GActionInitialization::~GActionInitialization()
 {
+	// close output connections
+	for(auto gmf: (*gmediaFactory)) {
+		gmf.second->closeConnection();
+	}
 }
 
 void GActionInitialization::Build() const
 {
 	flowMessage("Thread Build");
-
+	
 	SetUserAction(new GRunAction(gopt, gDigitizationGlobal, gmediaFactory));
 	SetUserAction(new GPrimaryGeneratorAction);
 	SetUserAction(new GEventAction(gopt));
